# ChangeLog for dev-ruby/ruby-ldap
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-ldap/ChangeLog,v 1.65 2014/06/03 19:39:16 graaff Exp $

  03 Jun 2014; Hans de Graaff <graaff@gentoo.org> ruby-ldap-0.9.12.ebuild:
  Fix documentation task, bug 512306.

  02 May 2014; Hans de Graaff <graaff@gentoo.org> ruby-ldap-0.9.16.ebuild:
  Add ruby21.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> ruby-ldap-0.9.12.ebuild,
  ruby-ldap-0.9.16.ebuild:
  Remove ree18 and ruby18 target.

  11 Nov 2013; Manuel Rüger <mrueg@gentoo.org> -ruby-ldap-0.9.13.ebuild,
  -ruby-ldap-0.9.15.ebuild:
  Cleanup old.

*ruby-ldap-0.9.16 (24 Sep 2013)

  24 Sep 2013; Hans de Graaff <graaff@gentoo.org> +ruby-ldap-0.9.16.ebuild:
  Version bump.

*ruby-ldap-0.9.15 (06 Sep 2013)

  06 Sep 2013; Hans de Graaff <graaff@gentoo.org> +ruby-ldap-0.9.15.ebuild:
  Version bump.

*ruby-ldap-0.9.13 (06 Jun 2013)

  06 Jun 2013; Hans de Graaff <graaff@gentoo.org> +ruby-ldap-0.9.13.ebuild:
  Version bump.

  06 Jun 2013; Hans de Graaff <graaff@gentoo.org> -ruby-ldap-0.9.9-r1.ebuild:
  Cleanup.

  06 Nov 2012; Jeroen Roovers <jer@gentoo.org> ruby-ldap-0.9.12.ebuild:
  Stable for HPPA (bug #422841).

  27 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-ldap-0.9.12.ebuild:
  alpha/ia64/sparc stable wrt #422481

  22 Jul 2012; <nixnut@gentoo.org> ruby-ldap-0.9.12.ebuild:
  ppc stable #422841

  26 Jun 2012; Jeff Horelick <jdhore@gentoo.org> ruby-ldap-0.9.12.ebuild:
  marked x86 per bug 422841

  21 Jun 2012; Agostino Sarubbo <ago@gentoo.org> ruby-ldap-0.9.12.ebuild:
  Stable for amd64, wrt bug #422841

*ruby-ldap-0.9.12 (14 Mar 2012)

  14 Mar 2012; MATSUU Takuto <matsuu@gentoo.org> +ruby-ldap-0.9.12.ebuild:
  Version bumped. Fixed HOMEPAGE. Clean up.

  26 Dec 2011; Hans de Graaff <graaff@gentoo.org> -ruby-ldap-0.9.9.ebuild:
  Remove old version.

  09 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  ruby-ldap-0.9.9-r1.ebuild: