@@ -4,13 +4,24 @@ Hash: SHA256
 DIST ruby-ldap-0.9.12.gem 71680 SHA256 e1530586f9b528d6dd17a8cea49099c1b21d561f96490941cb6d0c9f42cb9798 SHA512 99aedf75fa8922481049a62616443899df7fce85b1b843a4f82b0fc992860f19bb3dba3836c0851e0a74a7c595fca7a044043400d01a064027147ec902b4c84d WHIRLPOOL a0ce15fceb5d42aed69b09b40eb7b0ab9eecfd3432431796a084b54d1eed720f856d5796bb87c68f5f6631c54519e09413b0bdb38ad304f257bc63b3836613f4
 DIST ruby-ldap-0.9.16.gem 65024 SHA256 a068e0b0d52621c2a72583e07211f4795b3cd9496dd6b5cf7a2c8a746018ce21 SHA512 b81a9b24f29a7c40b5d1c020008bfd14666a15c3b407e5495ac7b12e470783d696c8ad25c9a508b9933829695a8ac3fcb52a209fdb4fb7de499308af61a4b832 WHIRLPOOL dea6d8f4c716f3c0408ca2ba11e4fd411916f9afd07a497deb91fe38c2f0440482a893527b8976801a41742da15f3cacc7330c85a26ec1c948e49e0a99a1f432
 EBUILD ruby-ldap-0.9.12.ebuild 1246 SHA256 f5de264168b645fc6df941f88bba56bb980ead182230d1678e8c9a343d6c3cb1 SHA512 d15a914ca8f2afa6cb862819824ee6990df5bfd11fb0826552217689f5213fc775b8642cca4154225354b26cd6a67bb1b3a3b6d4348b2b58655cfdf7b53fc67f WHIRLPOOL 985bf10cf04e28c0eb703e99976e0c8213f1066d86d4cb88d815379d1cafcd2bcfe7bfc989ef89c7d2407546af78afe39548bea2ca1b419c9f812e38ca9c6fc2
+EBUILD ruby-ldap-0.9.16-r1.ebuild 1262 SHA256 e6e98fac109cfa1ca9ffe0bd60153b92d20556072493e94166e9f04efae603aa SHA512 9b990d4406323d7f7e01039bbe569ff30e7a2537ac89c392fabc04fd388a503346f865cb1ab1e415e608bc162ea548dab711f516df04d396c37c11e13d19dbd2 WHIRLPOOL a071684c457ac765336ebd28a3a63b7590776235e3bbe1bfbd734e3cecb8a19de3e6e67d8a7b358bc81b33005a9b95128a99028a072c04f49b992ceddcbcb69c
 EBUILD ruby-ldap-0.9.16.ebuild 1258 SHA256 cfc830a49e93572871eef0c183bed754f6bc1ccb720f74f338dab37664ef9f9b SHA512 756af1250e1d992e39786d2f2feb26cf5779c8cba59b6884ef4fe6e03f58e034b8e3412208fa71bc788722954122f50499d5695e23cc4d3d0ca22b70f157d591 WHIRLPOOL 957b68700d16979e1481e3e6486e21c476d7dbe6b4b7c291c88c61f8bb47f8e58cb00235b97373f300ba2e7882712a06d1f00dd0dd7141c89d0847becec4f47d
-MISC ChangeLog 8035 SHA256 a17a22bd2a6e265019083860ca68a35fdecf925f6b78c2011206d2279ad4a321 SHA512 25de33cc50791bfa614c7e699bcbcff7c2b4cb924abec358f627771db531debd7f7cf8482345f655f6c3ddc445067389c0bdad23120c5fe2e201db87d4aec37e WHIRLPOOL b36713f3280d9a067eaa3cac07f3fcb434d5f36859796fe9714e650fe0b954394907627ab49c98e3d6d17a830ad003475cfcadf48de1df4742f593eebd49bd4b
+MISC ChangeLog 8201 SHA256 8db1ac25a40a46f361d0c0cdfb6704581076dc2bfce6d0abd3f58531a401beb5 SHA512 56035259db981aeb7c54a55b6288b4f49d4a18e9cb43cc485f0460300384e93605e5cab633f3bdea24254a5500c470953412c3e6daf218fbf3a2e2f095ab6572 WHIRLPOOL 0500ed344269e7440c79cc06460185afc290fa1921c29612db38267b352887c8ff5f7fd978d168ac6b0160d7ea08b31815eb37ba1eb607cc1e0481d7d20e066e
 MISC metadata.xml 243 SHA256 cc922e1de7b1bf8df81a0e39b32fccf91c733e945887202733d1b81841b6ae85 SHA512 ae5a8d6e1a86de842f170c6a1766543d3fafaab2205d802a30d7cd1cb1e9ced581418c7a497b31297e7eb016bd6d338c60a0df235a08b2f314a1c1083c6a4285 WHIRLPOOL 037a0830c921895664d043d261c7b4ed7fdf469d0b67c4f2669adcf265dd64e3bb965afb108fe2ef7ac0a3c01b7ffc40ec1546dc755dc458e0683040cff71791
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlOOJGgACgkQiIP6VqMIqNf8GAD9E3SG0+jTN25GBbwrAizfUZ3U
-mQRJsK9JhlV9zHjydwIA/0JfYy6xyaWB6kvTgu1sWVPXGcmLwRAttyTj8btF4qZ8
-=v7F2
+iQIcBAEBCAAGBQJT6huhAAoJECRx6z5ArFrDdHoQAIsn0SahKc5l+pE5nRmS6Uxp
+Ej83U7ml3q2GdHUIp60PLlGMvHiqEFGhMZGvv50XFlor+5zEk0T31nBdD5nNDhDh
+ITWgbKx3VTpdKHuWOo1IucIs4QNhlImJU3N8StSLoAqW8fOBaiXGwTREEL3qoWbD
+r2OyatVJ8jsaFacZgxiT6KqKYYo2UhH6O80w4aoVmbpnRRUqkYR8xvDTZ7f2KjgY
+FIHJrE+fHhKJy+tIloLBnoqKm6F9ZOutZ225RUIO5jutd3VDWB436CdwRpt3G7Oe
+JeLDqNVcjsc5lq+p7UbCQs4B+EFc2H30KlyN1yGjsmbDpLnmMVudjHq3hbZoykfo
+B9Skk49GpS4rtcQzaA0ofQ80bBsYRBbIcywweokzuYktGNfYGqQpvJQ068m1WdXc
+MMPT3YqPxtbJBPR3LRzPsiY0b9xW0qRnxgV6ELVopvGKU5n1xeFchZwE1Aj85kAt
+9JxgDnMsy8RrVgUXCc3KPowLw7m9aqP2Pg/HmidquDRxSkLEFDMgFJ4ORaBqv/7h
+l2jwQZEQ4dFb5aKJVmW4F8wKyF6Y0KcaUmBFn+GetMYLZwpDXYmJJAiMXuqDN7G4
+fwnCHjKeldEIWnTqJS2OmIDIQwSBO7hyfT7gGi2IKBYmVuv+Ps25IS5rJVqG4Xmc
+ehugn+vxp1Mk8QhqIHmw
+=EyGx
 -----END PGP SIGNATURE-----
