@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/ruby-ldap
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-ldap/ChangeLog,v 1.65 2014/06/03 19:39:16 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-ldap/ChangeLog,v 1.66 2014/08/12 13:50:12 prometheanfire Exp $
+
+*ruby-ldap-0.9.16-r1 (12 Aug 2014)
+
+  12 Aug 2014; Matthew Thode <prometheanfire@gentoo.org>
+  +ruby-ldap-0.9.16-r1.ebuild:
+  removing ruby21 for bug 513284
 
   03 Jun 2014; Hans de Graaff <graaff@gentoo.org> ruby-ldap-0.9.12.ebuild:
   Fix documentation task, bug 512306.
